--- a/src/admin/help/pt-BR/adddatapath.html
+++ b/src/admin/help/pt-BR/adddatapath.html
@@ -1,11 +1,11 @@
 <html>
 
    <head>
-     <meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
      
      <!-- Novell iFolder 3.x iManager Plugin  --> 
    
-     <title>Logging in to Web Admin</title>  	 
+     <title>Efetuando login no Web Admin</title>  	 
             
      <!-- Metadata -->
    
@@ -56,39 +56,30 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> 
-  <h3><a name="manage"></a>Add Data Store</h3>
-  <p>To add a new Data Store,</p>
+  <h3><a name="manage"></a>Adicionar Armazenamento de Dados</h3>
+  <p>Para adicionar um novo Armazenamento de Dados,</p>
   <ol>
     <li> 
-      <p>Specify the following information:</p>
+      <p>Especifique as seguintes informa&ccedil;&otilde;es:</p>
     </li>
     <P> 
-    <BLOCKQUOTE> <B> Name</B><BR>
-      Assign a unique name to the Data Store, such as ifolder-store. <BR>
+    <BLOCKQUOTE> <B> Nome</B><BR>
+      Designe um nome exclusivo para o Data Store, como ifolder-store.  <BR>
       <BR>
-      <B> Path</B><BR>
-      Enter the path where the new volume is mounted.<br>
-      If it is a remote volume (CIFS, NFS, AFP), then ensure that the volume is 
-      mounted on every restart for proper functioning and load balancing.<br>
-      You need to check the permissions of the path specified, and change the 
-      ownership and group to apacheuser (wwwrun) and apachegroup (www) respectively. 
-      Unless you have set the permission for the directory on to which the volume 
-      is mounted, you cannot create or sync iFolders on this volume. </blockquote>
+      <B> Caminho</B><BR>
+      Digite o caminho no qual o novo volume est&aacute; montado.<br>
+      Caso seja um volume remoto (CIFS, NFS, AFP), certifique-se de que ele seja montado a cada reinicializa&ccedil;&atilde;o para que o funcionamento e o equil&iacute;brio de carga sejam adequados.<br>
+      &Eacute; necess&aacute;rio selecionar as permiss&otilde;es do caminho especificado e mudar a propriedade e grupo para apacheuser (wwwrun) e apachegroup (www) respectivamente. A menos que tenha definido a permiss&atilde;o para o diret&oacute;rio no qual o volume ser&aacute; montado, voc&ecirc; n&atilde;o poder&aacute; criar nem sincronizar pastas do iFolder neste volume. </blockquote>
   </ol>
   
    
   
  
    
-<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A>
-<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4>
-<BLOCKQUOTE class="task1"><P><A HREF="serverdetails.html">Server Details</A>
-<BR><A HREF="systeminfo.html">Managing the iFolder System </A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P><P>&nbsp;</P><P CLASS="copyright">A 
-trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP>, 
-etc.) denotes a Novell trademark. An asterisk (*) denotes a third-party 
-trademark. For more information, see <A HREF="imgr_legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div>
+<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4>
+<BLOCKQUOTE class="task1"><P><A HREF="serverdetails.html">Detalhes do servidor</A>
+<BR><A HREF="systeminfo.html">Gerenciando o sistema do iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A></P><P>&nbsp;</P><P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="imgr_legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div>
 <!-- This is the end of the Help Content layer. --> 
 </body>
 
