--- a/src/admin/help/pt-BR/webacc.html
+++ b/src/admin/help/pt-BR/webacc.html
@@ -1,11 +1,11 @@
 <html>
 
    <head>
-     <meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
      
      <!-- Novell iFolder 3.x iManager Plugin  --> 
    
-     <title>Logging in to Web Admin</title>  	 
+     <title>Efetuando login no Web Admin</title>  	 
             
      <!-- Metadata -->
    
@@ -55,24 +55,14 @@
 <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> 
-  <h3 class="head3b">Launching Web Admin</h3>
+  <h3 class="head3b">Iniciando o Web Admin</h3>
   
-  <p>Web Admin console will let you manage servers, policy settings, iFolder users, 
-    and ifolders in a given iFolder 3.7 domain.You can enable users to iFolder 
-    domain from LDAP users and manage iFolder servers participating in the iFolder 
-    domain. With Web admin, you can also enforce encryption on users.Web Admin 
-    console will have the capability to produce enhanced reports that include 
-    overall server status, iFolder account reports and user account information. 
+  <p>O console do Web Admin permite que voc&ecirc; gerencie servidores, configura&ccedil;&otilde;es de pol&iacute;tica, usu&aacute;rios e pastas do iFolder em um determinado dom&iacute;nio do iFolder 3.7. Voc&ecirc; pode habilitar usu&aacute;rios para o dom&iacute;nio do iFolder em usu&aacute;rios LDAP e gerenciar servidores iFolder que participam do dom&iacute;nio. Com o Web Admin, voc&ecirc; tamb&eacute;m pode assegurar o uso obrigat&oacute;rio da criptografia em usu&aacute;rios. O console do Web Admin ter&aacute; a capacidade de produzir relat&oacute;rios aprimorados que incluem o status geral do servidor, os relat&oacute;rios da conta do iFolder e as informa&ccedil;&otilde;es sobre a conta do usu&aacute;rio. 
   </p>
 	
   
-	<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A>
-<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="login.html">Logging into Web Admin</A><BR><A HREF="member.html">Managing Web Admin Console</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P><P>&nbsp;</P><P CLASS="copyright">A 
-trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP>, 
-etc.) denotes a Novell trademark. An asterisk (*) denotes a third-party 
-trademark. For more information, see <A HREF="imgr_legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div>
+	<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4><BLOCKQUOTE class="task1"><P ><A HREF="login.html">Efetuando login no Web Admin</A><BR><A HREF="member.html">Gerenciando o console do Web Admin</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A></P><P>&nbsp;</P><P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="imgr_legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div>
 <!-- This is the end of the Help Content layer. --> 
 </body>
 
